# ffxiv-raid-planner

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  ci-auth-test.md  dev.ps1  dev.sh  railway.json
backend/: .env.example  .gitignore  ARCHITECTURE.md  alembic.ini  nixpacks.toml  pyproject.toml  register_slash_commands.py  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py
backend/app/: __init__.py  auth_utils.py  cache.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py  permissions.py  rate_limit.py  verify_email_removal.py
backend/scripts/: backfill_gcd.py  check_migration_dialect.py  check_migration_heads.py  migrate_add_is_admin.py  migrate_bis_setindex.py  migrate_materia.py  normalize_preset_names.py  reconcile_dev_db.py  seed_analytics.py
backend/tests/: __init__.py  conftest.py  factories.py  test_admin_system.py  test_analytics.py  test_api_keys.py  test_auth_utils.py  test_auto_sync.py  test_bis_materia.py  test_bis_targets.py  test_bis_xivgear_import.py  test_cache.py  test_catalog_id_import.py  test_collection_catalog.py  test_collection_goals.py  test_collection_sync.py  test_collections_center.py  test_config_validation.py  test_content_suggestions.py  test_dev_auth.py  test_discord_guild_events.py  test_discord_install.py  test_discord_webhook.py  test_discovery.py  test_dt_e2e_plugin_sync.py  test_duplicate_group.py  test_fit_score.py  test_flex_roles.py  test_gear_sync_safety.py  test_goal_from_suggestion.py  test_goals_alignment.py  (+41 more)
(+1208 files in other folders)
